# VortexFlow

./: .gitignore  CHANGELOG.md  README.md  docker-compose.beta.yml  docker-compose.observability.yml  docker-compose.prod.yml  docker-compose.yml  plan_proyecto_vortexflow.md
.github/workflows/: ci.yml
contracts/: trends-processed.json
docker/: dotnet.Dockerfile  frontend.Dockerfile  python.Dockerfile
docs/: deployment.md  e2e-tests.md  load-test-plan.md  regression-checklist.md  resiliency-patterns.md  user-guide.md
docs/adr/: 0001-foundation.md
grafana/: otel-collector-config.yaml  prometheus.yml  tempo.yaml
grafana/dashboards/: vortexflow.json
grafana/provisioning/dashboards/: dashboards.yml  default.yml
grafana/provisioning/datasources/: loki.yml  tempo.yml
k8s/: configmaps.yaml  infrastructure.yaml  ingress.yaml  namespace.yaml  secrets.yaml  services.yaml
src/backend-dotnet/: VortexFlow.sln
src/backend-dotnet/VortexFlow.Api/: Program.cs  VortexFlow.Api.csproj  VortexFlow.Api.http  WeatherForecast.cs
src/backend-dotnet/VortexFlow.Application/: Class1.cs  VortexFlow.Application.csproj
src/backend-dotnet/VortexFlow.Domain/: Class1.cs
src/backend-python/: .env  celerybeat-schedule-shm  celerybeat-schedule-wal  pyproject.toml  requirements.txt
src/backend-python/app/: config.py  main.py  worker.py
src/backend-python/app/models/: trend.py
src/backend-python/app/services/: analyzer.py  scraper.py
src/backend-python/app/tasks/: processing.py  publishing.py  scraping.py
src/frontend/: .env  .gitignore  cypress.config.ts  package-lock.json  package.json  tailwind.config.js
tests/load/: dashboard-load.js
(+56 files in other folders)
