[tool.poetry]
name = "backend-python"
version = "0.1.0"
description = "VortexFlow Tactical Specialist API"
authors = ["Admin <admin@vortexflow.local>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "*"
uvicorn = {extras = ["standard"], version = "*"}
celery = "*"
redis = "*"
kombu = "*"
httpx = "*"
tenacity = "*"
structlog = "*"
python-dotenv = "*"
pydantic = "*"
pydantic-settings = "*"
opentelemetry-api = "*"
opentelemetry-sdk = "*"
opentelemetry-instrumentation-fastapi = "*"
opentelemetry-instrumentation-httpx = "*"
opentelemetry-exporter-otlp = "*"
opentelemetry-instrumentation-celery = "*"
prometheus-client = "*"
wheel = ">=0.46.2"
setuptools = ">=79.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "*"
pytest = "*"
pip-audit = "*"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.format]
quote-style = "double"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
